--- a/app/src/main/res/layout/product_list_item.xml
+++ b/app/src/main/res/layout/product_list_item.xml
@@ -4,11 +4,14 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:layout_margin="10dp"
     android:padding="16dp">
 
     <!-- Product Image -->
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
+        android:backgroundTint="@color/white"
+        app:cardCornerRadius="20dp"
         android:layout_height="150dp">
         <ProgressBar
             android:layout_width="20dp"
@@ -24,15 +27,18 @@
             android:id="@+id/product_image"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:padding="5dp"
+            android:backgroundTint="@color/white"
             android:layout_gravity="center"
             android:contentDescription="@string/product_image"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:scaleType="centerInside"
+            android:scaleType="fitCenter"
             android:src="@drawable/bag" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.card.MaterialCardView>
 
     <!-- Product Name -->
     <TextView
