--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,10 @@
     <style name="Base.Theme.ProductExplorer" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="isMaterial3DynamicColorApplied">false</item>
+        <item name="android:progressBackgroundTint">@color/black</item>
+        <item name="android:backgroundTint">@color/light_grey</item>
+        <item name="android:colorPrimary">@color/grey</item>
     </style>
 
     <style name="Theme.ProductExplorer" parent="Base.Theme.ProductExplorer" />
