--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,6 +7,7 @@
         <item name="android:progressBackgroundTint">@color/black</item>
         <item name="android:backgroundTint">@color/light_grey</item>
         <item name="android:colorPrimary">@color/grey</item>
+        <item name="snackbarStyle">@style/CustomSnackbarStyle</item>
     </style>
 
     <style name="Theme.ProductExplorer" parent="Base.Theme.ProductExplorer" />
