--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -20,7 +20,6 @@
         android:id="@+id/top_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="100dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -29,17 +28,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="16dp">
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp">
 
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="match_parent"
                 app:cardCornerRadius="20dp"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:background="@color/white"
-                    android:padding="10dp"
                     android:backgroundTint="@color/white"
+                    android:padding="10dp"
                     android:layout_height="wrap_content">
 
                     <ProgressBar
@@ -51,15 +53,14 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-
                     <ImageView
                         android:id="@+id/product_detail_image"
                         android:layout_width="match_parent"
-                        android:backgroundTint="@color/white"
                         android:layout_height="300dp"
-                        android:contentDescription="@string/bag"
+                        android:layout_marginBottom="16dp"
                         android:scaleType="fitCenter"
                         android:src="@drawable/bag"
+                        android:contentDescription="@string/bag"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -70,13 +71,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:orientation="horizontal"
                 android:layout_marginTop="10dp"
-                android:orientation="horizontal">
+                android:weightSum="1">
 
                 <ImageView
                     android:id="@+id/star_icon"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:contentDescription="@string/star"
                     android:src="@drawable/star"
@@ -85,9 +87,8 @@
                 <TextView
                     android:id="@+id/rating"
                     android:layout_width="wrap_content"
-                    android:layout_height="24dp"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:gravity="center"
                     android:text="@string/_4_8"
                     android:textSize="16sp" />
 
@@ -100,14 +101,15 @@
                     app:chipBackgroundColor="@color/light_grey"
                     app:chipCornerRadius="30dp"
                     app:chipStrokeWidth="0dp" />
+
                 <TextView
                     android:id="@+id/price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="10dp"
                     android:text="@string/_0_00"
-                    android:textSize="22sp" />
+                    android:textSize="22sp"
+                    android:layout_margin="10dp" />
             </LinearLayout>
 
             <TextView
@@ -122,7 +124,7 @@
 
             <TextView
                 android:id="@+id/description"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:justificationMode="inter_word"
