--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,15 +14,13 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
+            android:layout_gravity="start"
+            android:gravity="start"
             android:elevation="3dp"
             android:minHeight="?attr/actionBarSize"
             android:ellipsize="none"
             android:singleLine="false"
-            android:lineSpacingExtra="4dp"
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    android:lineSpacingMultiplier="1.2"
-            app:title="My Title"
+            app:title="@string/discover_products"
             app:titleTextAppearance="@style/TitleTextAppearance"
             app:titleTextColor="@color/black"/>
 
